# decoding-gpt

./: .gitignore  LIF-fi-curve.ipynb  demo.ipynb  links.md  makefile  pyproject.toml  readme.md  requirements.txt  simplenet_mnist.ipynb  ufat_demo.ipynb
.github/requirements/: requirements-base.txt  requirements.txt
data/: tinystories_10k.txt
dev/: download_pile_10k.py  linear_probe.html  linear_probe.py
final_proj/: topics.md
final_proj/old/: final_proj.md
notebooks/: LIF-fi-curve.ipynb  Pytorch_NN_tutorial.ipynb  attention-heads.ipynb  demo_mnist.ipynb  interp-intro.md  interpretability.ipynb  intro-language-models.ipynb  rnns.ipynb  sparse-autoencoders.ipynb  transformers-from-scratch.ipynb  transformers.ipynb  ufat_demo.ipynb  vocab.json
notebooks/neural_net_from_scratch/: nn1_forwards.ipynb  nn2_deriving_backwards.ipynb  nn3_backwards.ipynb
notebooks/utils/: analyze_vocab.py  get_books.py  mermaid.py
projects/: transformers-from-scratch.md
projects/old/proj_1/: proj_1.md
slides/: linear-probes.md
